@@ -110,7 +110,7 @@ bool CArchiveLoaderTAR::isALoadableFileFormat(io::IReadFile* file) const
 		checksum2 += c8(*p);
 	}
 
-	if (!strcmp(fHead.Magic, "star"))
+	if (!strncmp(fHead.Magic, "ustar", 5))
 	{
 		for (u8* p = (u8*)(&fHead.Magic[0]); p < (u8*)(&fHead) + sizeof(fHead); ++p)
 		{
@@ -177,7 +177,7 @@ u32 CTarReader::populateFileList()
 
 			// USTAR archives have a filename prefix
 			// may not be null terminated, copy carefully!
-			if (!strcmp(fHead.Magic, "ustar"))
+			if (!strncmp(fHead.Magic, "ustar", 5))
 			{
 				c8* np = fHead.FileNamePrefix;
 				while(*np && (np - fHead.FileNamePrefix) < 155)
